dnsGracePeriod is not applied correctly and has no effect
Categories
(Core :: Networking: DNS, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr128 | --- | unaffected |
| firefox135 | --- | wontfix |
| firefox136 | --- | wontfix |
| firefox137 | --- | fixed |
People
(Reporter: omansfeld, Assigned: omansfeld)
References
(Regression)
Details
(Keywords: regression, Whiteboard: [necko-priority-next][necko-triaged])
Attachments
(1 file)
While setting up the dns cache experiment (bug 1937022) we noticed that the grace period is set to 0 here, which prevents that pref to have effect at all.
This needs to be rewritten so the grace period is actually applied.
Whats the reason we are setting it to zero there and ignoring the pref?
| Assignee | ||
Updated•1 year ago
|
This was a regression from mozilla-central @ 9872b8d761151528083c25170ef0a275f3228277
Before that we only set sGetTtlEnabled if #ifdef DNSQUERY_AVAILABLE.
To fix this we need 2 things:
- Make network.dns.get-ttl be true only on windows.
- Remove this line to allow us to extend the cache entry's expiration time past the TTL.
Comment 2•1 year ago
|
||
Set release status flags based on info from the regressing bug 1936996
Updated•1 year ago
|
| Assignee | ||
Comment 3•1 year ago
|
||
We set grace=0 before for requests that had a TTL. Now that we want to experiment with bigger grace periods we don't zero the grace period at all anymore, no matter if there is a TTL or not.
Also cleaned up the (now unnessecary) nested if condition and removed double allocation of TTL data.
| Assignee | ||
Comment 4•1 year ago
|
||
Moved fixing network.dns.get-ttl to it's own bug as it isn't necessary to make the grace period work. See Bug 1948018.
Comment 7•1 year ago
|
||
The patch landed in nightly and beta is affected.
:omansfeld, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- If no, please set
status-firefox136towontfix.
For more information, please visit BugBot documentation.
| Assignee | ||
Updated•1 year ago
|
Description
•