Bug 1947414 - grace period is now actually applied r=necko-reviewers,valentin

We set `grace=0` before for requests that had a TTL. Now that we want to experiment with bigger grace periods we don't zero the grace period at all anymore, no matter if there is a TTL or not.

Also cleaned up the (now unnessecary) nested if condition and removed double allocation of TTL data.

Differential Revision: https://phabricator.services.mozilla.com/D238033